--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0100.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0100.html
@@ -853,8 +853,7 @@
         </span>
         <span id="w_161" class="ocr_word" title="bbox 850 1439 987 1482">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_162" class="ocr_word" title="bbox 1014 1439 1098 1482">
@@ -917,8 +916,7 @@
         </span>
         <span id="w_173" class="ocr_word" title="bbox 914 1510 1065 1553">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aetius</ins>
-            <del title="nlp 0.90">Aetius</del>
+            <ins title="nlp 2.00">Aëtius</ins>
           </span>
         </span>
         <span id="w_174" class="ocr_word" title="bbox 1090 1510 1153 1553">
@@ -1036,8 +1034,7 @@
         </span>
         <span id="w_194" class="ocr_word" title="bbox 1169 1828 1221 1863">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">m</ins>
-            <del title="nlp 0.90">m</del>
+            <ins title="nlp 2.00">III</ins>
           </span>
         </span>
         <span id="w_195" class="ocr_word" title="bbox 1244 1841 1279 1875">
@@ -1066,8 +1063,7 @@
         </span>
         <span id="w_199" class="ocr_word" title="bbox 839 1902 975 1945">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_200" class="ocr_word" title="bbox 1002 1901 1086 1944">
@@ -1113,16 +1109,11 @@
         </span>
         <span id="w_208" class="ocr_word" title="bbox 1996 1903 2079 1956" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Ζή-</ins>
+            <ins title="nlp 2.00">Zήνωνα</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 346 1972 2078 2029">
-        <span id="w_209" class="ocr_word" title="bbox 346 1991 468 2018" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νωνα</ins>
-          </span>
-        </span>
         <span id="w_210" class="ocr_word" title="bbox 498 1991 525 2029" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡ</ins>
@@ -1313,17 +1304,11 @@
         </span>
         <span id="w_244" class="ocr_word" title="bbox 2003 2127 2079 2157">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">na-</ins>
+            <ins title="nlp 2.00">naturam</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 347 2186 2078 2241">
-        <span id="w_245" class="ocr_word" title="bbox 347 2193 485 2232">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">turam</ins>
-            <del title="nlp 0.90">naturam</del>
-          </span>
-        </span>
         <span id="w_246" class="ocr_word" title="bbox 516 2190 653 2231">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">animi</ins>
@@ -1344,14 +1329,12 @@
         </span>
         <span id="w_249" class="ocr_word" title="bbox 1176 2187 1344 2238">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">hrevius,</ins>
-            <del title="nlp 0.90">hrevius,</del>
+            <ins title="nlp 2.00">brevius,</ins>
           </span>
         </span>
         <span id="w_250" class="ocr_word" title="bbox 1368 2186 1717 2241">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pertwrhationem</ins>
-            <del title="nlp 0.90">pertwrhationem</del>
+            <ins title="nlp 2.00">pertrubationem</ins>
           </span>
         </span>
         <span id="w_251" class="ocr_word" title="bbox 1742 2199 1824 2229">
@@ -1396,15 +1379,9 @@
             <del title="nlp 0.90">definitio</del>
           </span>
         </span>
-        <span id="w_258" class="ocr_word" title="bbox 1225 2258 1550 2312">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">perturhationis</ins>
-            <del title="nlp 0.90">perturhationis</del>
-          </span>
-        </span>
         <span id="w_259" class="ocr_word" title="bbox 1556 2291 1566 2310">
           <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins title="nlp 2.00">perturbationis,</ins>
           </span>
         </span>
         <span id="w_260" class="ocr_word" title="bbox 1609 2271 1691 2312">
@@ -1464,8 +1441,7 @@
         </span>
         <span id="w_269" class="ocr_word" title="bbox 1142 2330 1398 2384">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">perturhatio</ins>
-            <del title="nlp 0.90">perturhatio</del>
+            <ins title="nlp 2.00">perturbatio</ins>
           </span>
         </span>
         <span id="w_270" class="ocr_word" title="bbox 1427 2330 1483 2373">
@@ -1526,8 +1502,7 @@
         </span>
         <span id="w_279" class="ocr_word" title="bbox 1083 2401 1252 2453">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">hrevius,</ins>
-            <del title="nlp 0.90">hrevius,</del>
+            <ins title="nlp 2.00">brevius,</ins>
           </span>
         </span>
         <span id="w_280" class="ocr_word" title="bbox 1293 2405 1339 2443">
@@ -1538,8 +1513,7 @@
         </span>
         <span id="w_281" class="ocr_word" title="bbox 1359 2401 1615 2454">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">perturhatio</ins>
-            <del title="nlp 0.90">perturhatio</del>
+            <ins title="nlp 2.00">perturbatio</ins>
           </span>
         </span>
         <span id="w_282" class="ocr_word" title="bbox 1645 2401 1701 2442">
@@ -1554,9 +1528,9 @@
             <del title="nlp 0.90">appetitus</del>
           </span>
         </span>
-        <span id="w_284" class="ocr_word" title="bbox 1967 2399 2078 2441">
+        <span id="w_284_0" class="ocr_word" title="bbox 1967 2399 2078 2441">
           <span class="alternatives">
-            <ins title="nlp 2.00">uehementior,</ins>
+            <ins class="alt" title="nlp 2.00">vehementior,</ins>
           </span>
         </span>
       </span>
@@ -1564,12 +1538,6 @@
         <span id="w_285" class="ocr_word" title="bbox 295 2494 329 2520">
           <span class="alternatives">
             <ins title="nlp 2.00">30</ins>
-          </span>
-        </span>
-        <span id="w_286" class="ocr_word" title="bbox 349 2476 537 2527">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mentior,</ins>
-            <del title="nlp 0.90">mentior,</del>
           </span>
         </span>
         <span id="w_287" class="ocr_word" title="bbox 567 2474 834 2517">
@@ -1602,15 +1570,14 @@
             <del title="nlp 0.90">qui</del>
           </span>
         </span>
-        <span id="w_292" class="ocr_word" title="bbox 1528 2471 1675 2525" lang="grc">
+        <span id="w_292_0" class="ocr_word" title="bbox 1528 2471 1675 2525">
           <span class="alternatives">
-            <ins title="nlp 2.00">qui</ins>
+            <ins class="alt" title="nlp 2.00">procul</ins>
           </span>
         </span>
-        <span id="w_293" class="ocr_word" title="bbox 1710 2470 1817 2513">
+        <span id="w_292_1" class="ocr_word" title="bbox 1528 2471 1675 2525">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ahsit</ins>
-            <del title="nlp 0.90">ahsit</del>
+            <ins class="alt" title="nlp 2.00">absit</ins>
           </span>
         </span>
         <span id="w_294" class="ocr_word" title="bbox 1847 2484 1874 2512">
@@ -1621,8 +1588,7 @@
         </span>
         <span id="w_295" class="ocr_word" title="bbox 1904 2474 2080 2512">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">natwrae</ins>
-            <del title="nlp 0.90">natwrae</del>
+            <ins title="nlp 2.00">naturae</ins>
           </span>
         </span>
       </span>
@@ -1674,8 +1640,7 @@
         </span>
         <span id="w_304" class="ocr_word" title="bbox 1358 2543 1701 2597">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">perturhationes,</ins>
-            <del title="nlp 0.90">perturhationes,</del>
+            <ins title="nlp 2.00">perturbationes,</ins>
           </span>
         </span>
         <span id="w_305" class="ocr_word" title="bbox 1744 2542 1792 2584">
@@ -1724,8 +1689,7 @@
         </span>
         <span id="w_312" class="ocr_word" title="bbox 995 2615 1319 2669">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ohtemperantes.</ins>
-            <del title="nlp 0.90">ohtemperantes.</del>
+            <ins title="nlp 2.00">obtemperantes.</ins>
           </span>
         </span>
       </span>
@@ -1771,7 +1735,7 @@
         </span>
         <span id="w_320" class="ocr_word" title="bbox 1151 2684 1198 2742">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">4.]</ins>
+            <ins title="nlp 2.00">4.</ins>
           </span>
         </span>
         <span id="w_321" class="ocr_word" title="bbox 1246 2692 1335 2727" lang="grc">
@@ -1905,9 +1869,14 @@
             <ins class="alt" title="nlp 1.00">ψυχῆς</ins>
           </span>
         </span>
-        <span id="w_346" class="ocr_word" title="bbox 1248 2829 1468 2883" lang="grc">
+        <span id="w_346_0" class="ocr_word" title="bbox 1248 2829 1468 2883">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἄλογον&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἄλογον&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_346_1" class="ocr_word" title="bbox 1248 2829 1468 2883">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_347" class="ocr_word" title="bbox 1492 2842 1610 2883" lang="grc">
@@ -1929,12 +1898,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Plut.</ins>
             <del title="nlp 0.90">Plut.</del>
-          </span>
-        </span>
-        <span id="w_351" class="ocr_word" title="bbox 2031 2825 2077 2868">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">in</ins>
-            <del title="nlp 0.90">in</del>
           </span>
         </span>
       </span>
@@ -2146,7 +2109,7 @@
         </span>
         <span id="w_389" class="ocr_word" title="bbox 1612 3045 1862 3095" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πεφυκυῖα</ins>
+            <ins title="nlp 2.00">„πεφυκυῖα</ins>
           </span>
         </span>
         <span id="w_390" class="ocr_word" title="bbox 1893 3038 2075 3081" lang="grc">
