--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0101.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0101.html
@@ -24,7 +24,7 @@
         </span>
         <span id="w_2" class="ocr_word" title="bbox 1901 189 1957 235">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">61</ins>
+            <ins title="nlp 2.00">51</ins>
           </span>
         </span>
       </span>
@@ -258,19 +258,19 @@
             <ins class="alt" title="nlp 1.00">εἶναι</ins>
           </span>
         </span>
-        <span id="w_48" class="ocr_word" title="bbox 1517 511 1647 568">
+        <span id="w_48_0" class="ocr_word" title="bbox 1517 511 1647 568">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;καὶ&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;καὶ&amp;#x003Ε;</ins>
           </span>
         </span>
-        <span id="w_49" class="ocr_word" title="bbox 1665 514 1800 557" lang="grc">
+        <span id="w_48_1" class="ocr_word" title="bbox 1517 511 1647 568">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πάλιν</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_50" class="ocr_word" title="bbox 1817 514 1962 568" lang="grc">
+        <span id="w_49_0" class="ocr_word" title="bbox 1665 514 1800 557">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;πᾶν&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">πάλιν</ins>
           </span>
         </span>
       </span>
@@ -1033,9 +1033,14 @@
             <del title="nlp 0.90">lu.</del>
           </span>
         </span>
-        <span id="w_185" class="ocr_word" title="bbox 304 1588 490 1646">
+        <span id="w_185_0" class="ocr_word" title="bbox 304 1588 490 1646">
           <span class="alternatives">
-            <ins title="nlp 2.00">M(??)ller).</ins>
+            <ins class="alt" title="nlp 2.00">Müller).</ins>
+          </span>
+        </span>
+        <span id="w_185_1" class="ocr_word" title="bbox 304 1588 490 1646">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_186" class="ocr_word" title="bbox 539 1591 696 1645" lang="grc">
@@ -1078,11 +1083,6 @@
             <ins class="alt" title="nlp 1.00">ἐπιγιγνομένας</ins>
           </span>
         </span>
-        <span id="w_194" class="ocr_word" title="bbox 1813 1593 1965 1638" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">αὐταῖς</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 223 1658 2019 1716">
         <span id="w_195" class="ocr_word" title="bbox 223 1665 440 1712" lang="grc">
@@ -1117,7 +1117,7 @@
         </span>
         <span id="w_201" class="ocr_word" title="bbox 1228 1659 1341 1715" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὰς]</ins>
+            <ins title="nlp 2.00">[τὰς]</ins>
           </span>
         </span>
         <span id="w_202" class="ocr_word" title="bbox 1372 1671 1557 1710" lang="grc">
@@ -1229,9 +1229,9 @@
             <del title="nlp 0.90">lu.</del>
           </span>
         </span>
-        <span id="w_222" class="ocr_word" title="bbox 1779 1730 1964 1787">
+        <span id="w_222_0" class="ocr_word" title="bbox 1779 1730 1964 1787">
           <span class="alternatives">
-            <ins title="nlp 2.00">M(??)ller).</ins>
+            <ins class="alt" title="nlp 2.00">Müller).</ins>
           </span>
         </span>
       </span>
@@ -1345,7 +1345,7 @@
         </span>
         <span id="w_244" class="ocr_word" title="bbox 1519 1873 1629 1930" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ]</ins>
+            <ins title="nlp 2.00">[καὶ]</ins>
           </span>
         </span>
         <span id="w_245" class="ocr_word" title="bbox 1656 1890 1732 1924" lang="grc">
@@ -1519,7 +1519,7 @@
         </span>
         <span id="w_277" class="ocr_word" title="bbox 1626 2088 1712 2131" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">332 Κ.,</ins>
+            <ins title="nlp 2.00">Κ.,</ins>
           </span>
         </span>
         <span id="w_279" class="ocr_word" title="bbox 1820 2103 1857 2144">
@@ -1541,9 +1541,14 @@
             <del title="nlp 0.90">lu.</del>
           </span>
         </span>
-        <span id="w_282" class="ocr_word" title="bbox 314 2161 501 2219">
+        <span id="w_282_0" class="ocr_word" title="bbox 314 2161 501 2219">
           <span class="alternatives">
-            <ins title="nlp 2.00">M(??)ller).</ins>
+            <ins class="alt" title="nlp 2.00">Müller).</ins>
+          </span>
+        </span>
+        <span id="w_282_1" class="ocr_word" title="bbox 314 2161 501 2219">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_283" class="ocr_word" title="bbox 552 2161 624 2205" lang="grc">
@@ -1579,11 +1584,6 @@
         <span id="w_290" class="ocr_word" title="bbox 1590 2158 1817 2211" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπόδειξιν</ins>
-          </span>
-        </span>
-        <span id="w_291" class="ocr_word" title="bbox 1855 2175 1966 2215" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑπὲρ</ins>
           </span>
         </span>
       </span>
@@ -1797,9 +1797,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_335" class="ocr_word" title="bbox 726 2520 862 2562">
+        <span id="w_335_0" class="ocr_word" title="bbox 726 2520 862 2562">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_335_1" class="ocr_word" title="bbox 726 2520 862 2562">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_336" class="ocr_word" title="bbox 891 2518 974 2561">
@@ -1833,11 +1838,6 @@
             <ins class="alt" title="nlp 1.00">ἀνωτάτω</ins>
           </span>
         </span>
-        <span id="w_342" class="ocr_word" title="bbox 1831 2516 1969 2574" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καθά</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 229 2586 1969 2648">
         <span id="w_343" class="ocr_word" title="bbox 229 2603 367 2648" lang="grc">
@@ -1847,17 +1847,17 @@
         </span>
         <span id="w_344" class="ocr_word" title="bbox 398 2625 407 2634">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_345" class="ocr_word" title="bbox 429 2628 436 2634">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_346" class="ocr_word" title="bbox 458 2626 467 2634">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_347" class="ocr_word" title="bbox 502 2596 683 2647" lang="grc">
@@ -1978,12 +1978,7 @@
         </span>
         <span id="w_369" class="ocr_word" title="bbox 1921 2661 1947 2702" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">δ</ins>
-          </span>
-        </span>
-        <span id="w_370" class="ocr_word" title="bbox 1960 2659 1970 2674">
-          <span class="alternatives">
-            <ins title="nlp 2.00">’</ins>
+            <ins title="nlp 2.00">δ’</ins>
           </span>
         </span>
       </span>
@@ -2281,9 +2276,14 @@
             <ins class="alt" title="nlp 1.00">10</ins>
           </span>
         </span>
-        <span id="w_423" class="ocr_word" title="bbox 564 3067 659 3115">
+        <span id="w_423_0" class="ocr_word" title="bbox 564 3067 659 3115">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;003C;in&amp;003E; </ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;in&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_423_1" class="ocr_word" title="bbox 564 3067 659 3115">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_424" class="ocr_word" title="bbox 687 3067 762 3103">
@@ -2322,11 +2322,6 @@
             <ins title="nlp 2.00">χύσεις</ins>
           </span>
         </span>
-        <span id="w_431" class="ocr_word" title="bbox 1749 3064 1971 3108">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Marcianus,</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 230 3116 1971 3166">
         <span id="w_432" class="ocr_word" title="bbox 230 3124 350 3164" lang="grc">
@@ -2356,9 +2351,14 @@
             <del title="nlp 0.90">del.</del>
           </span>
         </span>
-        <span id="w_437" class="ocr_word" title="bbox 791 3120 935 3156">
+        <span id="w_437_0" class="ocr_word" title="bbox 791 3120 935 3156">
           <span class="alternatives">
-            <ins title="nlp 2.00">Müller.</ins>
+            <ins class="alt" title="nlp 2.00">Müller.</ins>
+          </span>
+        </span>
+        <span id="w_437_1" class="ocr_word" title="bbox 791 3120 935 3156">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_438" class="ocr_word" title="bbox 1057 3123 1102 3155">
@@ -2391,12 +2391,6 @@
         <span id="w_443" class="ocr_word" title="bbox 1716 3116 1848 3161" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">δείξεις</ins>
-          </span>
-        </span>
-        <span id="w_444" class="ocr_word" title="bbox 1872 3117 1971 3160">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">libri,</ins>
-            <del title="nlp 0.90">libri,</del>
           </span>
         </span>
       </span>
@@ -2434,9 +2428,9 @@
             <del title="nlp 0.90">corr.</del>
           </span>
         </span>
-        <span id="w_451" class="ocr_word" title="bbox 1116 3173 1259 3209">
+        <span id="w_451_0" class="ocr_word" title="bbox 1116 3173 1259 3209">
           <span class="alternatives">
-            <ins title="nlp 2.00">Müller.</ins>
+            <ins class="alt" title="nlp 2.00">Müller.</ins>
           </span>
         </span>
       </span>
