--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0102.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0102.html
@@ -78,8 +78,7 @@
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1762 322 1870 365">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iUud</ins>
-            <del title="nlp 0.90">iUud</del>
+            <ins title="nlp 2.00">illud</ins>
           </span>
         </span>
         <span id="w_12" class="ocr_word" title="bbox 1897 323 2015 375">
@@ -282,7 +281,7 @@
         </span>
         <span id="w_46" class="ocr_word" title="bbox 1903 534 2088 593">
           <span class="alternatives">
-            <ins title="nlp 2.00">Müller).</ins>
+            <ins title="nlp 2.00">üller).</ins>
           </span>
         </span>
       </span>
@@ -292,9 +291,14 @@
             <ins title="nlp 2.00">5</ins>
           </span>
         </span>
-        <span id="w_48" class="ocr_word" title="bbox 354 603 406 658">
+        <span id="w_48_0" class="ocr_word" title="bbox 354 603 406 658">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ὁ</ins>
+            <ins class="alt" title="nlp 2.00">„ὁ</ins>
+          </span>
+        </span>
+        <span id="w_48_1" class="ocr_word" title="bbox 354 603 406 658">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_49" class="ocr_word" title="bbox 438 619 551 658" lang="grc">
@@ -324,7 +328,7 @@
         </span>
         <span id="w_54" class="ocr_word" title="bbox 1442 605 1492 660">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ὁ</ins>
+            <ins title="nlp 2.00">ὁ</ins>
           </span>
         </span>
         <span id="w_55" class="ocr_word" title="bbox 1525 612 1599 661" lang="grc">
@@ -340,11 +344,6 @@
         <span id="w_57" class="ocr_word" title="bbox 1832 607 1974 662" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὥσπερ</ins>
-          </span>
-        </span>
-        <span id="w_58" class="ocr_word" title="bbox 2007 603 2090 650" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὖν</ins>
           </span>
         </span>
       </span>
@@ -741,17 +740,17 @@
         </span>
         <span id="w_133" class="ocr_word" title="bbox 1395 1207 1403 1216">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_134" class="ocr_word" title="bbox 1424 1207 1432 1216">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_135" class="ocr_word" title="bbox 1454 1208 1461 1216">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_136" class="ocr_word" title="bbox 1494 1178 1706 1229">
@@ -1220,19 +1219,9 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_215" class="ocr_word" title="bbox 744 2016 830 2059">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">216</ins>
-          </span>
-        </span>
         <span id="w_216" class="ocr_word" title="bbox 833 2041 891 2047">
           <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_217" class="ocr_word" title="bbox 892 2016 978 2059">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">223a.</ins>
+            <ins title="nlp 2.00">216—223a.</ins>
           </span>
         </span>
         <span id="w_219" class="ocr_word" title="bbox 1061 2042 1119 2046">
@@ -1293,9 +1282,9 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_230" class="ocr_word" title="bbox 1242 2088 1488 2130">
+        <span id="w_230_0" class="ocr_word" title="bbox 1242 2088 1488 2130">
           <span class="alternatives">
-            <ins title="nlp 2.00">225—229.</ins>
+            <ins class="alt" title="nlp 2.00">225—229.</ins>
           </span>
         </span>
       </span>
@@ -1405,12 +1394,6 @@
         <span id="w_251" class="ocr_word" title="bbox 720 2269 779 2296" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἀπ'</ins>
-          </span>
-        </span>
-        <span id="w_252" class="ocr_word" title="bbox 789 2254 800 2270">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
           </span>
         </span>
         <span id="w_253" class="ocr_word" title="bbox 818 2270 956 2297" lang="grc">
@@ -2061,7 +2044,7 @@
         </span>
         <span id="w_382" class="ocr_word" title="bbox 1590 3124 1733 3161">
           <span class="alternatives">
-            <ins title="nlp 2.00">Müller.</ins>
+            <ins title="nlp 2.00">üller.</ins>
           </span>
         </span>
         <span id="w_383" class="ocr_word" title="bbox 1855 3128 1874 3158">
