--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0104.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0104.html
@@ -593,9 +593,14 @@
             <ins class="alt" title="nlp 1.00">δογμάτων</ins>
           </span>
         </span>
-        <span id="w_107" class="ocr_word" title="bbox 1026 1096 1129 1139">
+        <span id="w_107_0" class="ocr_word" title="bbox 1026 1096 1129 1139">
           <span class="alternatives">
-            <ins title="nlp 2.00">etc.“</ins>
+            <ins class="alt" title="nlp 2.00">etc.”</ins>
+          </span>
+        </span>
+        <span id="w_107_1" class="ocr_word" title="bbox 1026 1096 1129 1139">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_108" class="ocr_word" title="bbox 1191 1095 1251 1138">
@@ -608,11 +613,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">n.</ins>
             <del title="nlp 0.90">n.</del>
-          </span>
-        </span>
-        <span id="w_110" class="ocr_word" title="bbox 1349 1095 1446 1137" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">443.</ins>
           </span>
         </span>
       </span>
@@ -630,7 +630,7 @@
         </span>
         <span id="w_113" class="ocr_word" title="bbox 828 1167 963 1210">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_114" class="ocr_word" title="bbox 991 1166 1074 1209">
@@ -693,17 +693,17 @@
         </span>
         <span id="w_125" class="ocr_word" title="bbox 974 1272 982 1280">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_126" class="ocr_word" title="bbox 1004 1271 1012 1280">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_127" class="ocr_word" title="bbox 1033 1271 1043 1281">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_128" class="ocr_word" title="bbox 1078 1240 1244 1293" lang="grc">
@@ -1192,8 +1192,7 @@
         </span>
         <span id="w_211" class="ocr_word" title="bbox 1267 1892 1403 1934">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_212" class="ocr_word" title="bbox 1424 1890 1507 1934">
@@ -1256,7 +1255,7 @@
         </span>
         <span id="w_224" class="ocr_word" title="bbox 1612 1961 1838 2020" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Ζήνωνα)</ins>
+            <ins title="nlp 2.00">(Ζήνωνα)</ins>
           </span>
         </span>
         <span id="w_225" class="ocr_word" title="bbox 1883 1962 2084 2018" lang="grc">
@@ -1328,19 +1327,19 @@
             <ins class="alt" title="nlp 1.00">ἀδελφῶν</ins>
           </span>
         </span>
-        <span id="w_238" class="ocr_word" title="bbox 585 2106 715 2163">
+        <span id="w_238_0" class="ocr_word" title="bbox 585 2106 715 2163">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;καὶ&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;καὶ&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_238_1" class="ocr_word" title="bbox 585 2106 715 2163">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_239" class="ocr_word" title="bbox 745 2108 934 2157" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">οἰκείους</ins>
-          </span>
-        </span>
-        <span id="w_240" class="ocr_word" title="bbox 965 2108 1152 2149" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">οἰκείων.</ins>
           </span>
         </span>
       </span>
@@ -1656,7 +1655,7 @@
         </span>
         <span id="w_297" class="ocr_word" title="bbox 628 2552 738 2591" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,οὐκ</ins>
+            <ins title="nlp 2.00">οὐκ</ins>
           </span>
         </span>
         <span id="w_298" class="ocr_word" title="bbox 770 2535 998 2590" lang="grc">
@@ -2005,7 +2004,7 @@
         </span>
         <span id="w_357" class="ocr_word" title="bbox 637 2964 748 3006">
           <span class="alternatives">
-            <ins title="nlp 2.00">erit.“</ins>
+            <ins title="nlp 2.00">“</ins>
           </span>
         </span>
       </span>
@@ -2044,8 +2043,7 @@
         </span>
         <span id="w_364" class="ocr_word" title="bbox 1249 3121 1411 3156">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Hiibner.</ins>
-            <del title="nlp 0.90">Hiibner.</del>
+            <ins title="nlp 2.00">Hübner.</ins>
           </span>
         </span>
         <span id="w_365" class="ocr_word" title="bbox 1496 3125 1540 3156">
@@ -2090,9 +2088,9 @@
             <del title="nlp 0.90">sententiarum</del>
           </span>
         </span>
-        <span id="w_372" class="ocr_word" title="bbox 1047 3174 1238 3211">
+        <span id="w_372_0" class="ocr_word" title="bbox 1047 3174 1238 3211">
           <span class="alternatives">
-            <ins title="nlp 2.00">Zenonis“.</ins>
+            <ins class="alt" title="nlp 2.00">Zenonis”.</ins>
           </span>
         </span>
       </span>
