--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0105.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0105.html
@@ -48,8 +48,7 @@
         </span>
         <span id="w_6" class="ocr_word" title="bbox 918 285 1012 330">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Noe</ins>
-            <del title="nlp 0.90">Noe</del>
+            <ins title="nlp 2.00">Noë</ins>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1044 285 1085 330">
@@ -143,9 +142,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 251 427 1766 489">
-        <span id="w_24" class="ocr_word" title="bbox 251 429 341 489">
+        <span id="w_24_0" class="ocr_word" title="bbox 251 429 341 489">
           <span class="alternatives">
-            <ins title="nlp 2.00">&lt;τῷ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τῷ</ins>
+          </span>
+        </span>
+        <span id="w_24_1" class="ocr_word" title="bbox 251 429 341 489">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_25" class="ocr_word" title="bbox 368 427 417 474" lang="grc">
@@ -158,9 +162,14 @@
             <ins title="nlp 2.00">σοφῷ</ins>
           </span>
         </span>
-        <span id="w_27" class="ocr_word" title="bbox 607 431 1078 487" lang="grc">
+        <span id="w_27_0" class="ocr_word" title="bbox 607 431 1078 487">
           <span class="alternatives">
-            <ins title="nlp 2.00">παρακατατίθενται&gt;,</ins>
+            <ins class="alt" title="nlp 2.00">παρακατατίθενται&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_27_1" class="ocr_word" title="bbox 607 431 1078 487">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_28" class="ocr_word" title="bbox 1111 447 1192 474" lang="grc">
@@ -176,16 +185,6 @@
         <span id="w_30" class="ocr_word" title="bbox 1338 435 1496 487" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μεθύει</ins>
-          </span>
-        </span>
-        <span id="w_31" class="ocr_word" title="bbox 1528 429 1552 473" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
-          </span>
-        </span>
-        <span id="w_32" class="ocr_word" title="bbox 1584 430 1766 483" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀστεῖος.</ins>
           </span>
         </span>
       </span>
@@ -257,7 +256,7 @@
         </span>
         <span id="w_44" class="ocr_word" title="bbox 743 786 880 830">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_45" class="ocr_word" title="bbox 908 785 992 830">
@@ -320,7 +319,7 @@
         </span>
         <span id="w_56" class="ocr_word" title="bbox 757 858 841 915" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">[τε]</ins>
+            <ins title="nlp 2.00">τε]</ins>
           </span>
         </span>
         <span id="w_57" class="ocr_word" title="bbox 875 858 986 915" lang="grc">
@@ -843,14 +842,14 @@
             <ins class="alt" title="nlp 1.00">ἐπὶ</ins>
           </span>
         </span>
-        <span id="w_157" class="ocr_word" title="bbox 1765 1504 1872 1560">
+        <span id="w_157_0" class="ocr_word" title="bbox 1765 1504 1872 1560">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;δὲ&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;δὲ&amp;#x003Ε;</ins>
           </span>
         </span>
-        <span id="w_158" class="ocr_word" title="bbox 1902 1522 1991 1549" lang="grc">
+        <span id="w_157_1" class="ocr_word" title="bbox 1765 1504 1872 1560">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1108,8 +1107,7 @@
         </span>
         <span id="w_202" class="ocr_word" title="bbox 840 1863 945 1918">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(sdl.</ins>
-            <del title="nlp 0.90">(sdl.</del>
+            <ins title="nlp 2.00">(Scil.</ins>
           </span>
         </span>
         <span id="w_203" class="ocr_word" title="bbox 983 1863 1113 1906">
@@ -2302,8 +2300,7 @@
         </span>
         <span id="w_406" class="ocr_word" title="bbox 1741 3164 1837 3202">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ubri.</ins>
-            <del title="nlp 0.90">Ubri.</del>
+            <ins title="nlp 2.00">libri.</ins>
           </span>
         </span>
       </span>
