--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0106.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0106.html
@@ -220,9 +220,14 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_36" class="ocr_word" title="bbox 816 687 902 730" lang="grc">
+        <span id="w_36_0" class="ocr_word" title="bbox 816 687 902 730">
           <span class="alternatives">
-            <ins title="nlp 2.00">233—246.</ins>
+            <ins class="alt" title="nlp 2.00">233—246.</ins>
+          </span>
+        </span>
+        <span id="w_36_1" class="ocr_word" title="bbox 816 687 902 730">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_37" class="ocr_word" title="bbox 1084 713 1137 718">
@@ -254,14 +259,9 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_42" class="ocr_word" title="bbox 1742 690 1824 732" lang="grc">
+        <span id="w_42_0" class="ocr_word" title="bbox 1742 690 1824 732">
           <span class="alternatives">
-            <ins title="nlp 2.00">247—249.</ins>
-          </span>
-        </span>
-        <span id="w_43" class="ocr_word" title="bbox 2014 716 2064 722">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
+            <ins class="alt" title="nlp 2.00">247—249.</ins>
           </span>
         </span>
       </span>
@@ -278,19 +278,9 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_46" class="ocr_word" title="bbox 761 758 848 802">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">250</ins>
-          </span>
-        </span>
         <span id="w_47" class="ocr_word" title="bbox 849 784 907 789">
           <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_48" class="ocr_word" title="bbox 909 759 1006 801">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">257.</ins>
+            <ins title="nlp 2.00">250—257.</ins>
           </span>
         </span>
         <span id="w_49" class="ocr_word" title="bbox 1040 784 1094 789">
@@ -345,9 +335,9 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_58" class="ocr_word" title="bbox 1234 830 1480 874">
+        <span id="w_58_0" class="ocr_word" title="bbox 1234 830 1480 874">
           <span class="alternatives">
-            <ins title="nlp 2.00">259—271.</ins>
+            <ins class="alt" title="nlp 2.00">259—271.</ins>
           </span>
         </span>
       </span>
@@ -412,7 +402,7 @@
         </span>
         <span id="w_69" class="ocr_word" title="bbox 1766 927 1906 970">
           <span class="alternatives">
-            <ins title="nlp 2.00">Kühn.</ins>
+            <ins title="nlp 2.00">ühn.</ins>
           </span>
         </span>
         <span id="w_70" class="ocr_word" title="bbox 1958 944 2071 970" lang="grc">
@@ -1195,7 +1185,7 @@
         </span>
         <span id="w_219" class="ocr_word" title="bbox 602 2133 740 2176">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_220" class="ocr_word" title="bbox 765 2132 850 2175">
@@ -1822,9 +1812,14 @@
             <ins class="alt" title="nlp 1.00">ἂν</ins>
           </span>
         </span>
-        <span id="w_339" class="ocr_word" title="bbox 1495 2846 1706 2900">
+        <span id="w_339_0" class="ocr_word" title="bbox 1495 2846 1706 2900">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;φυτῶν&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;φυτῶν&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_339_1" class="ocr_word" title="bbox 1495 2846 1706 2900">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_340" class="ocr_word" title="bbox 1735 2849 1879 2889" lang="grc">
@@ -1835,11 +1830,6 @@
         <span id="w_341" class="ocr_word" title="bbox 1909 2862 1977 2888" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_342" class="ocr_word" title="bbox 2011 2863 2084 2889" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">καλὸν</ins>
           </span>
         </span>
       </span>
