--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0107.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0107.html
@@ -76,9 +76,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 256 352 1997 411">
-        <span id="w_12" class="ocr_word" title="bbox 256 352 568 408" lang="grc">
+        <span id="w_12_0" class="ocr_word" title="bbox 256 352 568 408">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;ἀνθρώποις&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἀνθρώποις&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_12_1" class="ocr_word" title="bbox 256 352 568 408">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_13" class="ocr_word" title="bbox 600 360 692 404" lang="grc">
@@ -114,11 +119,6 @@
         <span id="w_19" class="ocr_word" title="bbox 1777 372 1880 406" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">τοὺς</ins>
-          </span>
-        </span>
-        <span id="w_20" class="ocr_word" title="bbox 1910 371 1997 398" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τοιούτους</ins>
           </span>
         </span>
       </span>
@@ -794,7 +794,7 @@
         </span>
         <span id="w_147" class="ocr_word" title="bbox 868 1427 1009 1471">
           <span class="alternatives">
-            <ins title="nlp 2.00">233Β.</ins>
+            <ins title="nlp 2.00">Β.</ins>
           </span>
         </span>
         <span id="w_148" class="ocr_word" title="bbox 1031 1427 1073 1471">
@@ -844,9 +844,14 @@
             <ins class="alt" title="nlp 1.00">τἄλλα</ins>
           </span>
         </span>
-        <span id="w_157" class="ocr_word" title="bbox 424 1499 687 1554" lang="grc">
+        <span id="w_157_0" class="ocr_word" title="bbox 424 1499 687 1554">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;φαίνεται&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;φαίνεται&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_157_1" class="ocr_word" title="bbox 424 1499 687 1554">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_158" class="ocr_word" title="bbox 718 1503 833 1555" lang="grc">
@@ -891,11 +896,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">argento)</ins>
             <del title="nlp 0.90">argento</del>
-          </span>
-        </span>
-        <span id="w_166" class="ocr_word" title="bbox 1931 1500 2002 1544" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -1304,7 +1304,7 @@
         </span>
         <span id="w_246" class="ocr_word" title="bbox 831 2071 960 2128" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἐξὸν</ins>
+            <ins title="nlp 2.00">ἐξὸν</ins>
           </span>
         </span>
         <span id="w_247" class="ocr_word" title="bbox 992 2072 1075 2116" lang="grc">
@@ -1492,9 +1492,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 260 2358 2059 2415">
-        <span id="w_281" class="ocr_word" title="bbox 260 2360 372 2415">
+        <span id="w_281_0" class="ocr_word" title="bbox 260 2360 372 2415">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;ἃν&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἂν&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_281_1" class="ocr_word" title="bbox 260 2360 372 2415">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_282" class="ocr_word" title="bbox 405 2360 518 2403" lang="grc">
@@ -1535,11 +1540,6 @@
         <span id="w_289" class="ocr_word" title="bbox 1466 2364 1641 2415" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μαθεῖν.</ins>
-          </span>
-        </span>
-        <span id="w_290" class="ocr_word" title="bbox 2024 2378 2059 2403">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">30</ins>
           </span>
         </span>
       </span>
