--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0108.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0108.html
@@ -653,17 +653,17 @@
         </span>
         <span id="w_116" class="ocr_word" title="bbox 1469 1131 1476 1139">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_117" class="ocr_word" title="bbox 1497 1130 1507 1140">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_118" class="ocr_word" title="bbox 1529 1131 1537 1139">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_119" class="ocr_word" title="bbox 1570 1098 1643 1139" lang="grc">
@@ -688,9 +688,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_123" class="ocr_word" title="bbox 426 1169 566 1225">
+        <span id="w_123_0" class="ocr_word" title="bbox 426 1169 566 1225">
           <span class="alternatives">
-            <ins title="nlp 2.00">&lt;γὰρ&gt;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;γὰρ&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_123_1" class="ocr_word" title="bbox 426 1169 566 1225">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_124" class="ocr_word" title="bbox 596 1183 714 1224" lang="grc">
@@ -736,11 +741,6 @@
         <span id="w_132" class="ocr_word" title="bbox 1849 1170 1935 1211" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὑπὸ</ins>
-          </span>
-        </span>
-        <span id="w_133" class="ocr_word" title="bbox 1973 1176 2062 1211" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
       </span>
@@ -817,7 +817,7 @@
         </span>
         <span id="w_148" class="ocr_word" title="bbox 816 1383 954 1425">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_149" class="ocr_word" title="bbox 987 1382 1072 1426">
@@ -1314,9 +1314,9 @@
             <ins class="alt" title="nlp 1.00">ἀλλὰ</ins>
           </span>
         </span>
-        <span id="w_242" class="ocr_word" title="bbox 1968 2096 2063 2153" lang="grc">
+        <span id="w_242_0" class="ocr_word" title="bbox 1968 2096 2063 2153">
           <span class="alternatives">
-            <ins title="nlp 2.00">[τὰ]</ins>
+            <ins class="alt" title="nlp 2.00">[τὰ]</ins>
           </span>
         </span>
       </span>
@@ -1449,7 +1449,7 @@
       <span class="ocr_line" title="bbox 273 2380 2064 2440">
         <span id="w_269" class="ocr_word" title="bbox 468 2386 561 2440" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">30 δὼς μὲν</ins>
+            <ins title="nlp 2.00">δὼς μὲν</ins>
           </span>
         </span>
         <span id="w_270" class="ocr_word" title="bbox 610 2386 904 2428" lang="grc">
